--- a/src/main/resources/templates/booklist.html
+++ b/src/main/resources/templates/booklist.html
@@ -15,6 +15,7 @@
 <th>Title</th>
 <th>ISBN</th>
 <th>Year</th>
+<th></th>
 </tr>
 
 <tr th:each="book : ${books}">
@@ -22,9 +23,12 @@
 <td th:text="${book.title}"></td>
 <td th:text="${book.isbn}"></td>
 <td th:text="${book.year}"></td>
+<td><a th:href="@{/deletebook/{id}(id=${book.id})}">Delete</a></td>
 </tr>
 
 </table>
+
+<a href="/addbook">Add book</a>
 
 </body>
 </html>
