--- a/src/main/resources/templates/booklist.html
+++ b/src/main/resources/templates/booklist.html
@@ -16,6 +16,7 @@
 <th>ISBN</th>
 <th>Year</th>
 <th></th>
+<th></th>
 </tr>
 
 <tr th:each="book : ${books}">
@@ -24,6 +25,7 @@
 <td th:text="${book.isbn}"></td>
 <td th:text="${book.year}"></td>
 <td><a th:href="@{/deletebook/{id}(id=${book.id})}">Delete</a></td>
+<td><a th:href="@{/edit/{id}(id=${book.id})}">Edit</a></td>
 </tr>
 
 </table>
