--- a/src/main/resources/templates/booklist.html
+++ b/src/main/resources/templates/booklist.html
@@ -2,13 +2,14 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
 <meta charset="UTF-8">
-<title>Insert title here</title>
+<link type="text/css" rel="stylesheet" href="css/bootstrap.min.css" th:href="@{css/bootstrap.min.css}" />
+<title>Booklist</title>
 </head>
 <body>
 
 <h1>Books</h1>
 
-<table>
+<table class="table table-striped">
 
 <tr>
 <th>Author</th>
@@ -24,13 +25,13 @@
 <td th:text="${book.title}"></td>
 <td th:text="${book.isbn}"></td>
 <td th:text="${book.year}"></td>
-<td><a th:href="@{/deletebook/{id}(id=${book.id})}">Delete</a></td>
-<td><a th:href="@{/edit/{id}(id=${book.id})}">Edit</a></td>
+<td><a th:href="@{/deletebook/{id}(id=${book.id})}" class="btn btn-danger">Delete</a></td>
+<td><a th:href="@{/edit/{id}(id=${book.id})}" class="btn btn-primary">Edit</a></td>
 </tr>
 
 </table>
 
-<a href="/addbook">Add book</a>
+<a href="/addbook" class="btn btn-success">Add book</a>
 
 </body>
 </html>
